--- a/views/pruebaLogin.ejs
+++ b/views/pruebaLogin.ejs
@@ -18,7 +18,11 @@
             <% } %>
         </ul>
       <% } %>
+      <br>
+      <br>
+      <br>
       
+      <div class= "pruebaLogin">
         <form action="/usuario/pruebaLogin"  class="misResenas" method="POST">
           <br>
           <br>
@@ -44,6 +48,7 @@
           <input class="uk-button uk-button-default uk-margin uk-button-primary" type="submit" value="Login" >
         </div>
       </form>
+    </div>
       <footer>
           <div class="padre">
         <img src="/images/tmdblogo.png" class="tmdblogo">
