--- a/views/recientes.ejs
+++ b/views/recientes.ejs
@@ -1,45 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" href="/stylesheets/misResenas.css">
     <link rel="stylesheet" href="/stylesheets/pagina.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/css/uikit.min.css" />
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/js/uikit.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/js/uikit-icons.min.js"></script>
-
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-
     <%- include("header") %>
-
-<% if (resultado.length == 0) { %> 
-            <p class="necesitas"> Todavia no tienes niguna reseña hecha! Anda al detalle de una pelicula y crea una! Que esperas!
-            </p>
+    <h1>Listado de reseñas mejores puntuadas</h1>
+    <ul>
+        <% for(let i = 0; i < resenas.length; i++) { %>
+            <li>
+                <a href="/peliculas/usuario/<%=resenas[i].id_usuarios%>"> 
+                    <%=resenas[i].resenas%>
+                     - Rating: <%=resenas[i].rating%>
+                  
+         - Fecha de actualizacion: <%=resenas[i].fecha_de_actualizacion%>
             
-    <%} else {%>
-    <h1>Tus resenas son:</h1>
-
-    <% for (let i = 0; i < resultado.length; i++) { %>
-        <li class="resena">
-            <%=resultado[i].resenas%>
-        </li>
-
-        <form action="/usuario/delete/<%=resultado[i].id%>" method="POST">
-            <input type="submit" value="Borrar">
-        </form>
-    
-   
-        <a href="/usuario/editar/<%=resultado[i].id%>">Editar</a> 
-
-    <% }  } %>
-  
+        </a> </li>
+        <% } %>
+    </ul>
 
     <%- include("footer") %>
-      
 </body>
 </html>
