--- a/public/stylesheets/detallePeli.css
+++ b/public/stylesheets/detallePeli.css
@@ -20,7 +20,41 @@ body{
   margin-bottom: 2%;
 }
 
+#form {
+  width: 250px;
+  margin: 0 auto;
+  height: 50px;
+}
 
+#form p {
+  text-align: center;
+}
+
+#form label {
+  font-size: 20px;
+}
+
+input[type="radio"] {
+  display: none;
+}
+
+label {
+  color: grey;
+}
+
+.clasificacion {
+  direction: rtl;
+  unicode-bidi: bidi-override;
+}
+
+label:hover,
+label:hover ~ label {
+  color: orange;
+}
+
+input[type="radio"]:checked ~ label {
+  color: orange;
+}
 footer{
     background-color: rgba(112, 148, 181, 0.65);
     height: 12vh;
@@ -182,13 +216,18 @@ section{
 .labelsDeResenas {
   color: white;
 }
-.listadoDeResenas{
-
-color: white;
-
-
-
+.listadoDeResenas {
+  overflow: hidden;
+  border-radius: 25px;
+  background: #0099ff;
+  padding: 20px; 
+  width: 200px;
+  height: 200px; 
 }
+.resenitas {
+  float: right;
+}
+
 .fechaEstreno h2{
   font-family: Poppins;
   font-weight: normal;
@@ -201,6 +240,8 @@ color: white;
   border-radius: 15px;
 
 }
+
+
 .fechaEstreno{
   position: relative;
 }
