--- a/public/stylesheets/misResenas.css
+++ b/public/stylesheets/misResenas.css
@@ -26,7 +26,9 @@ h1{
 footer{
     background-color: rgba(112, 148, 181, 0.65);
  
-    overflow: hidden;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 
 }
 
