--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -14,104 +14,8 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  
-        <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
-        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
-          </li>
-          
-          <li id=""class="nav-item">
-            <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
-          </li>
-  
-          <li id=""class="nav-item">
-            <a  href="/usuario/misResenas" class="nav-link" >Mis reseñas</a>
-          </li>
-  
-          <li class= "nav-item">
-  
-            
-            <form action="/peliculas/search" method="GET"> 
-              <input type="text" name="search" placeholder="Buscador de usuario">
-              <input type="submit" value="Enviar">
-          </form>  
-        </li> 
-  
-      
-        </ul>
-  
-      
-        <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
-                        <span class="uk-search-icon-flip" uk-search-icon></span>
-                        <input class="form-control mr-sm-2" name="q" type="search" placeholder="Search" aria-label="Search" >
-                    </form>
-        <a  id="login" style="color:gold"; class="uk-button uk-button-default btn btn-outline-warning" href="#modal-sections" uk-toggle>Registrate</a>
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  </form>
-  
-  
-  <div id="modal-sections" uk-modal>
-      <div class="uk-modal-dialog">
-          <button class="uk-modal-close-default" type="button" uk-close></button>
-          <div class="uk-modal-header">
-              <h2 class="uk-modal-title">Registrate!</h2>
-          </div>
-          <div class="uk-modal-body">
-           
-          
-              </ul>
-            <form class="logincompleto" action="/peliculas" method="post">
-           
-          <form action="/usuario" method="POST">
-            <br>
-             <div>
-                 <label for="">Nombre</label>
-                 <input type="text" name="nombre">
-             </div>
-             
-             <br>
-             <div>
-                 <label for="">Email</label>
-                 <input type="text" name="email">
-             </div>
-             <br>
-             <div>
-                 <label for="">Password</label>
-                 <input type="password" name="contraseña">
-             
-             </div>
-             <div>
-               <br>
-                 <label for="">Fecha de Nacimiento</label>
-                 <input type="date" name="nacimiento">
-             
-             </div>
-             <br>
-            
-        
-          <div class="uk-modal-footer uk-text-right">
-              <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
-              <button class="uk-button uk-button-primary" type="submit">Send</button>
-          </div>
-        </form>      
-      </div>
-    </div>
-      </div>
-    </nav>
-      </header>
+  <%- include("header") %>
+
     <section>
     <h1 style="color: white;">
         <%=unUsuario.nombre %>
@@ -119,29 +23,27 @@
     <p style="color: white;">
         Email: <%=unUsuario.email %>
     </p>
-
-
-        <% for ( let i=0 ; i< unUsuario.resena.length; i++) { %> 
     <p style="color: white;">
+      Email: <%=unUsuario.fecha_de_nacimiento %>
+  </p>
 
-        Resenas: <%=unUsuario.resena[i].resenas %>
+    <% if( unUsuario.resena.length == 0) { %> 
+
+                <p>Este usuario no tiene reseñas creadas</p>
+      <%} else {%>
+          Reseñas:
+        <% for ( let i=0 ; i< unUsuario.resena.length; i++) { %> 
+   
+            <h3>
+              <%=unUsuario.resena[i].rating %>
+            </h3>
+          <p style="color: white;">  
+      <%=unUsuario.resena[i].resenas %>
     </p>
   
- <% } %>
+ <% } } %>
 </section>
- <footer>
-    <img src="/images/tmdblogo.png" class="tmdblogo">
-
-    <div class="nombres">
-    <ul>
-      <li>MATIAS GALLARDO</li>
-      <li>JUAN IGNACIO BEDOIAN</li>
-      <li>LUCIANO MARCOGLIESE</li>
-    </ul>
-  </div>
-       </div>
-
- </footer>
+<%- include("footer") %>
     
 </body>
 </html> 
