--- a/views/peliculasFavoritas.ejs
+++ b/views/peliculasFavoritas.ejs
@@ -11,28 +11,9 @@
     <title>The Movie Planet</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
-      <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
-        </li>
-        <li id="pelispref"class="nav-item">
-          <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
-        </li>
-      </ul>
-      <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
-          <span class="uk-search-icon-flip" uk-search-icon></span>
-          <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" >
-      </form>
-    </div>
-  </nav>
-    </header>
+   
+    <%- include("header") %>
+
     <p class="saludo">Welcome</p>
     <div class="uk-position-relative uk-visible-toggle uk-light"  tabindex="-1" uk-slider>
 
@@ -48,19 +29,8 @@
 </section>
 <br>
 
-<footer>
-  <img src="/images/tmdblogo.png" class="tmdblogo">
 
-  <div class="nombres">
-  <ul>
-    <li>MATIAS GALLARDO</li>
-    <li>JUAN IGNACIO BEDOIAN</li>
-    <li>LUCIANO MARCOGLIESE</li>
-  </ul>
-</div>
-     </div>
-
-</footer>
+<%- include("footer") %>
 
 
   </body>
