--- a/views/pelisPorGenero.ejs
+++ b/views/pelisPorGenero.ejs
@@ -12,68 +12,13 @@
     <title>The Movie Planet</title>
   </head>
   <body>
-    <header>
-      <nav class="navbar navbar-expand-lg navbar-light bg-light" id="navbar">
-  
-      <a class="navbar-brand" href="/peliculas"> <img src="/images/logo.png" class="loguito" alt=""> </a>
-      <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
-        <li class="nav-item">
-          <a class="nav-link" href="/peliculas/listadoDeGeneros">Genres<span class="sr-only">(current)</span></a>
-        </li>
-        <li id="pelispref"class="nav-item">
-          <a class="nav-link" href="/peliculas/favoritos">Favorite movies</a>
-        </li>
-      </ul>
-      <form method="get" action="/peliculas/buscador" class="uk-search uk-search-default buscar">
-          <span class="uk-search-icon-flip" uk-search-icon></span>
-          <input class="form-control mr-sm-2" type="search" name="q" placeholder="Search" aria-label="Search" >
-      </form>
-      <a  id="login" style="color:gold"; class="uk-button uk-button-default btn btn-outline-warning" href="#modal-sections" uk-toggle>Login</a>
+    
+    <%- include("header") %>
 
-<div id="modal-sections" uk-modal>
-    <div class="uk-modal-dialog">
-        <button class="uk-modal-close-default" type="button" uk-close></button>
-        <div class="uk-modal-header">
-            <h2 class="uk-modal-title">Login</h2>
-        </div>
-        <div class="uk-modal-body">
-          <form class="logincompleto" action="Home.html" method="post">
-          <label for="nombre">Name</label>
-          <input class="name" type="text" name="name" value="" required>
-          <br>
-          <label for="genero">Gender</label>
-          <select class="" name="genero">
-            <option value="fem">
-              Female
-            </option>
-            <option value="mal">
-              Male
-            </option>
-            <option value="other">
-              Other
-            </option>
-          </select>
-          <br>
-          <label for="email">Email</label>
-          <input type="email" name="email" value="" required>
-        </div>
-        <div class="uk-modal-footer uk-text-right">
-            <button class="uk-button uk-button-default uk-modal-close" type="button">Cancel</button>
-            <button class="uk-button uk-button-primary" type="submit">Send</button>
-        </div>
-            </form>
-    </div>
-  </div>
-    </div>
-  </nav>
-    </header>
+
     <p class="saludo">Welcome</p>
 <br>
-<!-- <div class="contenedorPpal">
-  <ul class="ul-genero">
 
-  </ul>
-</div> -->
 <div class="uk-position-relative uk-visible-toggle uk-light uk-slider-container" tabindex="-1" uk-slider>
   <ul class="uk-slider-items uk-child-width-1-2 uk-child-width-1-3@s uk-child-width-1-4@m ul-genero">
 
@@ -83,19 +28,7 @@
 </div>
 
 
-<footer>
-  <img src="/images/tmdblogo.png" class="tmdblogo">
-
-  <div class="nombres">
-  <ul>
-    <li>MATIAS GALLARDO</li>
-    <li>JUAN IGNACIO BEDOIAN</li>
-    <li>LUCIANO MARCOGLIESE</li>
-  </ul>
-</div>
-     </div>
-
-</footer>
+ <%- include("footer") %>
 
 
   </body>
