--- a/views/peoresPuntuadas.ejs
+++ b/views/peoresPuntuadas.ejs
@@ -11,11 +11,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="z">
     
     <%- include("header") %>
 
-    <h1>Listado de reseñas peores puntuadas</h1>
+    <h1  class="b">Listado de reseñas peores puntuadas</h1>
     <ul>
         <% for(let i = 0; i < resenas.length; i++) { %>
             <li>
