--- a/views/mejoresPuntuadas.ejs
+++ b/views/mejoresPuntuadas.ejs
@@ -11,13 +11,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body>
+<body class="z">
   
     <%- include("header") %>
 
 
 
-    <h1>Listado de reseñas mejores puntuadas</h1>
+    <h1  class="b">Listado de reseñas mejores puntuadas</h1>
     <ul>
         <% for(let i = 0; i < resenas.length; i++) { %>
             <li>
