--- a/public/stylesheets/detallePeli.css
+++ b/public/stylesheets/detallePeli.css
@@ -219,7 +219,7 @@ section{
 .listadoDeResenas {
   overflow: hidden;
   border-radius: 25px;
-  background: #0099ff;
+  background: #030226;
   padding: 20px; 
   width: 200px;
   height: 200px; 
