--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -24,7 +24,7 @@
         Email: <%=unUsuario.email %>
     </p>
     <p style="color: white;">
-      Email: <%=unUsuario.fecha_de_nacimiento %>
+      Fecha de nacimiento: <%=unUsuario.fecha_de_nacimiento %>
   </p>
 
     <% if( unUsuario.resena.length == 0) { %> 
