--- a/views/misResenas.ejs
+++ b/views/misResenas.ejs
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="/stylesheets/misResenas.css">
     <link rel="stylesheet" href="/stylesheets/pagina.css">
+    <link rel="stylesheet" href="/stylesheets/detallePeli.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/uikit/3.1.5/css/uikit.min.css" />
@@ -14,11 +15,16 @@
     <title>Document</title>
 </head>
 <body>
-
     <%- include("header") %>
+    <% if (variableUsuario == undefined){ %> 
+                    <h3 class="titulos"> <%=faltaLogin%> </h3>
+                    <a href="/usuario/pruebaLogin"> <p>Para loguiarte haz click aca</p></a>
+    <%  } else {  %>
+
+  
 
 <% if (resultado.length == 0) { %> 
-            <p class="necesitas"> Todavia no tienes niguna reseña hecha! Anda al detalle de una pelicula y crea una! Que esperas!
+            <p class="titulos"> Todavia no tienes niguna reseña hecha! Anda al detalle de una pelicula y crea una! Que esperas!
             </p>
             
     <%} else {%>
@@ -36,7 +42,7 @@
    
         <a href="/usuario/editar/<%=resultado[i].id%>">Editar</a> 
 
-    <% }  } %>
+    <% }  }} %>
   
 
     <%- include("footer") %>
