--- a/views/recientes.ejs
+++ b/views/recientes.ejs
@@ -12,14 +12,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<body class="z">
+<body >
     <%- include("header") %>
-    <h1 class="titulos">Listado de reseñas mas recientes:</h1>
+
+
+
+    <h1 class="titulos">Listado de reseñas mejores puntuadas</h1>
    
         
     <% for(let i = 0; i < resenas.length; i++) { %>
-  <div class="puntuadas ">  
-        <ul >
+    <div class="puntuadas uk-flex-inline" style="margin: 2%;">  
+         <ul >
                 <a  href="/peliculas/usuario/<%=resenas[i].id_usuarios%>">
                 <li style="list-style: none;"><h3 style="color: white;"> <%=resenas[i].usuario.nombre %></h3></li>  </a>
                 <li  style="list-style: none;">   <%=resenas[i].resenas%>    </li>
@@ -27,7 +30,11 @@
                 <li  style="list-style: none;">  Ult. actualizacion: <%=resenas[i].fecha_de_actualizacion%></li>
         </ul>
     </div>  
-<% } %>
+            <% } %>
+    
+
+
+
     <%- include("footer") %>
 </body>
 </html>
