--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -16,7 +16,7 @@
 <body>
   <%- include("header") %>
 
-    <section>
+    
     <h1 style="color: white;">
         <%=unUsuario.nombre %>
     </h1>
@@ -29,20 +29,36 @@
 
     <% if( unUsuario.resena.length == 0) { %> 
 
-                <p>Este usuario no tiene reseñas creadas</p>
+                <h4 style="color: white;">Este usuario no tiene reseñas creadas</h4>
       <%} else {%>
-          Reseñas:
+
+
+
+                <h3 style="color: white;">Sus reseñas son:</h3>
+        
         <% for ( let i=0 ; i< unUsuario.resena.length; i++) { %> 
    
-            <h3>
-              <%=unUsuario.resena[i].rating %>
-            </h3>
-          <p style="color: white;">  
-      <%=unUsuario.resena[i].resenas %>
-    </p>
-  
+          <div class="uk-section uk-section-primary uk-preserve-color uk-width-1-2 uk-section-xsmall " style="margin-bottom: 10px; background-color: lightsalmon;" >
+            <div class="uk-container">
+        
+                <div class="uk-panel uk-light uk-margin-medium">
+                    <h3 style="text-align: center;">   <%=unUsuario.resena[i].rating %> ★</h3>
+                </div>
+        
+                <div class="uk-grid-match uk-child-width-expand@m" uk-grid>
+                    <div>
+                        <div class="uk-card uk-card-default uk-card-body">
+                            <p>  <%=unUsuario.resena[i].resenas %></p>
+                        </div>
+                    </div>
+                </div>
+        
+            </div>
+        </div>
+            
+        
  <% } } %>
-</section>
+
 <%- include("footer") %>
     
 </body>
