--- a/views/editar.ejs
+++ b/views/editar.ejs
@@ -10,6 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="/stylesheets/pagina.css">
+    <link rel="stylesheet" href="/stylesheets/detallePeli.css">
 </head>
 <body>
     <%- include("header") %>
@@ -26,45 +27,45 @@
 
     <form action="/usuario/editar/<%=resultado.id%>" method="POST">
         <br>
-        <div>
-            <label for="">Email:</label>
-            <input type="text" name="email" value="" placeholder="Ingresa tu email" >
-        </div>
+      
         <br>
         <br>
 
-        <div>
-            <label for="">Contraseña:</label>
-            <input type="password" name="contraseña" value=""  placeholder="Ingresa tu email" >
+       <section style="text-align: center;"> 
+        <div >
+            <label for=""> <h4 style="color: white;">Reseña a modificar: </h4></label>
+            <br>
+            <textarea name="resenas"  cols="30" rows="10"><%=resultado.resenas%></textarea>
         </div>
-        <br>
-        <br>
-
-       
-        <div>
-            <label for="">Reseña:</label>
-            <input type="text" name="resenas" value="<%=resultado.resenas%>">
-        </div>
-        <br>
-        <br>
-
-        <div>
-            <label for="">Rating</label>
-            <input type="text" name="rating" value="<%=resultado.rating%>">
-        </div>
-        <br>
-        <br>
-
-        <div>
-            <label for="">Fecha de actualizacion</label>
-            <input type="date" name="fecha_de_actualizacion" value="<%=resultado.fecha_de_actualizacion%>">
-        </div>
-        <br>
-        <br>
+        
+    <p style="color: white;">Rating actual: <%=resultado.rating%> ★</p>
+ 
+        <p class="clasificacion">
+          <input id="radio1" type="radio" name="estrellas" value="10">
+          <label for="radio1">★</label>
+          <input id="radio2" type="radio" name="estrellas" value="9">
+          <label for="radio2">★</label>
+          <input id="radio3" type="radio" name="estrellas" value="8">
+          <label for="radio3">★</label>
+          <input id="radio4" type="radio" name="estrellas" value="7">
+          <label for="radio4">★</label>
+          <input id="radio5" type="radio" name="estrellas" value="6">
+          <label for="radio5">★</label>
+          <input id="radio6" type="radio" name="estrellas" value="5">
+          <label for="radio6">★</label>
+          <input id="radio7" type="radio" name="estrellas" value="4">
+          <label for="radio7">★</label>
+          <input id="radio8" type="radio" name="estrellas" value="3">
+          <label for="radio8">★</label>
+          <input id="radio9" type="radio" name="estrellas" value="2">
+          <label for="radio9">★</label>
+          <input id="radio10" type="radio" name="estrellas" value="1">
+          <label for="radio10">★</label>
+        </p>        
 
         <input type="submit" value="Enviar">
     </form>
-
+</section>
     <%- include("footer") %>
 </body>
 </html>
