--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -28,9 +28,10 @@
   </p>
 
     <% if( unUsuario.resena.length == 0) { %> 
-
+        <div style="height: 50vh;"> 
                 <h4 style="color: white;">Este usuario no tiene reseñas creadas</h4>
-      <%} else {%>
+            </div>
+                <%} else {%>
 
 
 
