--- a/views/usuariosResultados.ejs
+++ b/views/usuariosResultados.ejs
@@ -30,16 +30,19 @@
   <h1 class="a titulos">Usuarios encontrados:</h1>
   
     <% for (let i = 0; i< usuarios.length; i++) { %>
-      
+      <div style="background-color: #030226 ;"> 
         <ul> 
            <li>
                 <a class="b" href="/peliculas/usuario/<%=usuarios[i].id%>" >
-                <%=usuarios[i].nombre %>
-            
+             <h3 style="color: white; list-style: none;">
+              <%=usuarios[i].nombre %>
+             </h3>  
+        
         </li>
   </ul>
+</div>
     <% } } %>
-
+    <div style="height: 50vh;"></div>
     <%- include("footer") %>
    
 </body>
