--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -16,10 +16,11 @@
 <body>
   <%- include("header") %>
 
-    
+    <div  style="background-color: #030226 ;">
     <h1 style="color: white;">
         <%=unUsuario.nombre %>
     </h1>
+</div>
     <p style="color: white;">
         Email: <%=unUsuario.email %>
     </p>
