--- a/views/listadoDeGeneros.ejs
+++ b/views/listadoDeGeneros.ejs
@@ -26,7 +26,7 @@
   <ul class="uk-slider-items uk-child-width-1-5" id="generos"></ul>
 </section>
 </div>
-
+<div style="height: 12vh;"></div>
 <%- include("footer") %>
 
 
