--- a/views/detalleDeUnaPeli.ejs
+++ b/views/detalleDeUnaPeli.ejs
@@ -82,7 +82,7 @@
 
 <% for (let i = 0; i< resenas.length; i++) { %>
 
-  <div class="puntuadas"> 
+  <div class="puntuadas uk-flex-inline"> 
 
   <ul class= "">  
           <li class="" style="list-style:none">     <%=resenas[i].rating %> ★  </li> 
@@ -95,7 +95,7 @@
       <% }  %>
 
 
-
+<br>
 
 
 <button class= "botonResena uk-button uk-button-default uk-margin uk-button-secondary">Crear reseña</button>
