--- a/views/detalleUsuario.ejs
+++ b/views/detalleUsuario.ejs
@@ -16,7 +16,7 @@
 <body>
   <%- include("header") %>
 
-    <div  style="background-color: #030226 ;">
+    <div >
     <h1 style="color: white;">
         <%=unUsuario.nombre %>
     </h1>
